src/main/metadata/objects/TestRecipientGroup__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalGroupMember__c</fullName>
        <description>Count the member</description>
        <label>Total Group Member</label>
        <summaryForeignKey>SMSTestRecipient__c.TestRecipientGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Test Recipient Group</label>
    <nameField>
        <label>Test Recipient Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Recipient Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>